--- a/languages/skyroom.pot
+++ b/languages/skyroom.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the Skyroom package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Skyroom 1.0.0\n"
+"Project-Id-Version: Skyroom 1.2.1\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/skyroom\n"
-"POT-Creation-Date: 2019-02-04 17:51:34+00:00\n"
+"POT-Creation-Date: 2019-02-06 11:29:35+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -88,9 +88,9 @@ msgstr ""
 msgid "Skyroom Integration"
 msgstr ""
 
-#. #-#-#-#-#  skyroom.pot (Skyroom 1.0.0)  #-#-#-#-#
+#. #-#-#-#-#  skyroom.pot (Skyroom 1.2.1)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
-#. #-#-#-#-#  skyroom.pot (Skyroom 1.0.0)  #-#-#-#-#
+#. #-#-#-#-#  skyroom.pot (Skyroom 1.2.1)  #-#-#-#-#
 #. Author of the plugin/theme
 #: src/Skyroom/Menu/MainMenu.php:26
 #: src/Skyroom/WooCommerce/SkyroomProductRegistrar.php:72
@@ -147,7 +147,7 @@ msgid ""
 "configure it to start working."
 msgstr ""
 
-#: src/Skyroom/Repository/UserRepository.php:133
+#: src/Skyroom/Repository/UserRepository.php:134
 msgid "User is not registered to skyroom"
 msgstr ""
 
@@ -430,6 +430,10 @@ msgstr ""
 
 #: src/Skyroom/WooCommerce/SkyroomProductRegistrar.php:205
 msgid "Error"
+msgstr ""
+
+#: views/enrollments.php:8
+msgid "You are not attended to any course yet."
 msgstr ""
 
 #: views/enrollments.php:13
