--- a/languages/skyroom-fa_IR.po
+++ b/languages/skyroom-fa_IR.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Skyroom 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/skyroom\n"
 "POT-Creation-Date: 2020-06-19 21:05+0430\n"
-"PO-Revision-Date: 2020-07-18 09:08+0430\n"
+"PO-Revision-Date: 2020-07-26 11:44+0430\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fa_IR\n"
@@ -599,6 +599,14 @@ msgstr "ثبت نشده"
 #: views/woocommerce-skyroom-order.php:5
 msgid "This room already exists"
 msgstr "نام اتاق تکراری است و اتاقی با این نام از قبل وجود دارد."
+
+#: views/woocommerce-skyroom-order.php:6
+msgid "Invalid input"
+msgstr "ورودی نامعتبر است"
+
+#: views/woocommerce-skyroom-order.php:7
+msgid "Internal server error"
+msgstr "سرور مشغول است"
 
 #: views/woocommerce-skyroom-order.php:3
 msgid ""
