--- a/languages/skyroom-fa_IR.po
+++ b/languages/skyroom-fa_IR.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Skyroom 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/skyroom\n"
 "POT-Creation-Date: 2020-06-19 21:05+0430\n"
-"PO-Revision-Date: 2020-07-28 10:25+0430\n"
+"PO-Revision-Date: 2020-08-15 12:35+0430\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fa_IR\n"
@@ -595,6 +595,22 @@ msgstr "خطای نوع محصول"
 #: views/woocommerce-skyroom-order.php:2
 msgid "This product is not skyroom type."
 msgstr "نوع این محصول برای اسکای روم نیست."
+
+#: src/Skyroom/Entity/SkyroomWidget.php:13
+msgid "Skyroom wplms widget"
+msgstr "ابزارک اسکای روم برای WPLMS"
+
+#: src/Skyroom/Entity/SkyroomWidget.php:15
+msgid ""
+"This widget skyroom for wplms courses and and it does not work in any other "
+"plugins"
+msgstr ""
+"این ابزارک اسکای روم برای WPLMS است و برای افزونه های دیگر کاربردی ندارد و فقط "
+"برای دوره های WPLMS قابل استفاده است"
+
+#: src/Skyroom/Entity/SkyroomWidget.php:53
+msgid "Join to course room"
+msgstr "ورود به اتاق دوره"
 
 #: views/woocommerce-skyroom-order.php:3
 msgid ""
