--- a/languages/skyroom.pot
+++ b/languages/skyroom.pot
@@ -606,6 +606,9 @@ msgstr ""
 msgid "Room entry link expiration time (scound) :"
 msgstr ""
 
+msgid "ttl or Time To Live is the validity period of the link in seconds, which in the example above is 60 seconds is equivalent to one hour. After this period, the generated link is not valid and if used, the user will encounter an error invalidating the link."
+msgstr ""
+
 #: views/woocommerce-skyroom-order.php:3
 msgid ""
 "You successfully enrolled in purchased courses. To attend classes, on "
