add pagination to users list

--- a/languages/skyroom-fa_IR.po
+++ b/languages/skyroom-fa_IR.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Skyroom 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/skyroom\n"
 "POT-Creation-Date: 2020-06-19 21:05+0430\n"
-"PO-Revision-Date: 2020-08-15 12:35+0430\n"
+"PO-Revision-Date: 2020-12-23 19:15+0330\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fa_IR\n"
@@ -612,6 +612,12 @@ msgstr ""
 msgid "Join to course room"
 msgstr "ورود به اتاق دوره"
 
+msgid "Edit user"
+msgstr "ویرایش کاربر"
+
+msgid "Edit"
+msgstr "ویرایش"
+
 #: views/woocommerce-skyroom-order.php:3
 msgid ""
 "You successfully enrolled in purchased courses. To attend classes, on announced "
@@ -665,9 +671,6 @@ msgstr ""
 
 #~ msgid "Remove from skyroom"
 #~ msgstr "حذف از اسکای‌روم"
-
-#~ msgid "Edit user"
-#~ msgstr "ویرایش کاربر"
 
 #~ msgid "Wordpress name"
 #~ msgstr "نام وردپرسی"
