--- a/languages/skyroom-fa_IR.po
+++ b/languages/skyroom-fa_IR.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Skyroom 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/skyroom\n"
 "POT-Creation-Date: 2020-06-19 21:05+0430\n"
-"PO-Revision-Date: 2020-12-23 19:15+0330\n"
+"PO-Revision-Date: 2020-12-25 13:41+0330\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fa_IR\n"
@@ -149,10 +149,19 @@ msgstr "تنظیمات"
 msgid "Skyroom Users"
 msgstr "کاربران اسکای‌روم"
 
+#: src/Skyroom/Menu/UserSubmenu.php:40
+msgid "Users Registered"
+msgstr "کاربران ثبت نام شده"
+
 #: src/Skyroom/Menu/UserSubmenu.php:41 src/Skyroom/Tables/UsersTable.php:28
 #: views/users.php:2
 msgid "Users"
 msgstr "کاربران"
+
+#: src/Skyroom/Menu/UserSubmenu.php:41 src/Skyroom/Tables/UsersTable.php:28
+#: views/users.php:2
+msgid "Registered"
+msgstr "ثبت نام شده ها"
 
 #: src/Skyroom/Plugin.php:158
 #, php-format
@@ -615,14 +624,20 @@ msgstr "ورود به اتاق دوره"
 msgid "Room entry link expiration time (scound) :"
 msgstr "مدت زمان انقضای لینک ورود به اتاق (ثانیه) :"
 
+#, fuzzy
+#| msgid ""
+#| "ttl or Time To Live is the validity period of the link in seconds, which in "
+#| "the example above is 60 seconds is equivalent to one hour. After this "
+#| "period, the generated link is not valid and if used, the user will encounter "
+#| "an error invalidating the link."
 msgid ""
 "ttl or Time To Live is the validity period of the link in seconds, which in the "
-"example above is 60 seconds is equivalent to one hour. After this period, the "
+"example above is 60 seconds is equivalent to one minute. After this period, the "
 "generated link is not valid and if used, the user will encounter an error "
 "invalidating the link."
 msgstr ""
 "ttl یا Time To Live مدت زمان اعتبار لینک به ثانیه است که در مثال بالا این مدت "
-"60 ثانیه معادل یک ساعت می‌باشد. پس از این مدت، لینک تولید شده معتبر نیست و در "
+"60 ثانیه معادل یک دقیقه می‌باشد. پس از این مدت، لینک تولید شده معتبر نیست و در "
 "صورت استفاده، کاربر با خطای عدم اعتبار لینک روبرو می‌شود"
 
 msgid "Edit user"
