--- a/languages/skyroom-fa_IR.po
+++ b/languages/skyroom-fa_IR.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Skyroom 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/skyroom\n"
 "POT-Creation-Date: 2020-06-19 21:05+0430\n"
-"PO-Revision-Date: 2021-01-25 15:33+0330\n"
+"PO-Revision-Date: 2021-01-25 16:16+0330\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fa_IR\n"
@@ -621,18 +621,16 @@ msgstr ""
 msgid "Join to course room"
 msgstr "ورود به اتاق دوره"
 
-msgid "Room entry link expiration time (scound) :"
-msgstr "مدت زمان انقضای لینک ورود به اتاق (ثانیه) :"
+msgid "Room entry link expiration time :"
+msgstr "مدت زمان انقضای لینک ورود به اتاق :"
 
 msgid ""
-"ttl or Time To Live is the validity period of the link in seconds, which in the "
-"example above is 60 seconds is equivalent to one minute. After this period, the "
+"ttl or Time To Live is the validity period of the link. After this period, the "
 "generated link is not valid and if used, the user will encounter an error "
 "invalidating the link."
 msgstr ""
-"ttl یا Time To Live مدت زمان اعتبار لینک به ثانیه است که در مثال بالا این مدت "
-"60 ثانیه معادل یک دقیقه می‌باشد. پس از این مدت، لینک تولید شده معتبر نیست و در "
-"صورت استفاده، کاربر با خطای عدم اعتبار لینک روبرو می‌شود."
+"ttl یا Time To Live مدت زمان اعتبار لینک است. پس از این مدت، لینک تولید شده "
+"معتبر نیست و در صورت استفاده، کاربر با خطای عدم اعتبار لینک روبرو می‌شود."
 
 msgid "Edit user"
 msgstr "ویرایش کاربر"
@@ -657,6 +655,12 @@ msgstr "ذخیره تغییرات با خطا مواجه شد"
 
 msgid "Cancel"
 msgstr "لغو"
+
+msgid "Second"
+msgstr "ثانیه"
+
+msgid "Minute"
+msgstr "دقیقه"
 
 #: views/woocommerce-skyroom-order.php:3
 msgid ""
